# marathon-manager

./: .gitignore  pyproject.toml  requirements.txt
src/: manage.py
src/overlay_manager/: asgi.py  settings.py  urls.py  wsgi.py
src/overlay_manager/runs/: admin.py  apps.py  models.py
src/overlay_manager/runs/forms/: __init__.py  event.py
src/overlay_manager/runs/migrations/: 0001_initial.py  0002_eventdata_remove_run_run_order_and_more.py  0003_alter_run_event.py  0004_remove_run_is_current_eventdata_shift_and_more.py  0005_rename_commenters_run_commentators.py  0006_eventdata_event_end_on_eventdata_event_start_on.py  0007_run_trigger_warning.py  0008_alter_run_runners.py  0009_remove_eventdata_event_end_on_and_more.py  0010_run_obs_scene_id.py  0011_person_rtmp_host.py  0012_alter_person_rtmp_host.py
src/overlay_manager/runs/operations/: rtmp.py  runs.py
src/overlay_manager/runs/views/: __init__.py  css.py  event.py  runs.py  sceenshot.py
src/overlay_manager/templates/: base.html  main.css
src/overlay_manager/templates/current/: run_category.html  run_estimate.html  run_name.html  run_platform.html  run_trigger_warning.html  runner_name.html  runner_name_and_pronouns.html  runner_pronouns.html
src/overlay_manager/templates/event/: details.html  edit.html
src/overlay_manager/templates/next/: run.html
src/overlay_manager/vendors/obs/: client.py
